--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -5,9 +5,9 @@ strong {
     font-size: 1.17em;
 }
 
-h2 , h3, h4, h5, h6 {
+/* h2 , h3, h4, h5, h6 {
     color: #6c91d5 !important;
-}
+} */
 
 /* h1 {
     color: #49576f !important;
